# traccount

./: .gitignore  README.md  SPECIFICATION.md  pyproject.toml
tests/: conftest.py  test_db.py  test_e2e.py  test_machine.py  test_mail.py  test_profile.py  test_register.py  test_switcher.py  test_trae_api.py  test_vault.py  test_web.py
trae_account_manager/: __init__.py  cli.py  config.py  db.py  machine.py  models.py  process_ctl.py  profile.py  register.py  switcher.py  trae_api.py  vault.py
trae_account_manager/mail/: __init__.py  base.py  deepmails.py  emailnator.py  mailtm.py  pool.py  tempmail.py  tempmailplus.py
trae_account_manager/web/: __init__.py  app.py
trae_account_manager/web/static/: index.html
