[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trae-account-manager"
version = "1.0.0"
description = "Automated account registration + one-click switching for the Trae IDE."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TAM" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sqlmodel>=0.0.16",
    "cryptography>=42",
    "keyring>=24",
    "typer>=0.9",
    "rich>=13",
    "loguru>=0.7",
    "tenacity>=8",
    "platformdirs>=4",
    "pydantic>=2",
]

[project.optional-dependencies]
# Browser-based email providers (e.g. DeepMails for Cloudflare-Turnstile-protected
# sites). NOT required for the default emailnator flow — install only if you
# need a fallback browser-rendered email source:
#   pip install -e ".[browser]" && playwright install chromium
browser = [
    "playwright>=1.40",
]
test = ["pytest>=8"]

[project.scripts]
tam = "trae_account_manager.cli:main"

[tool.setuptools.packages.find]
include = ["trae_account_manager*"]

[tool.setuptools.package-data]
"trae_account_manager.web" = ["static/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
